package Lhd_Msg;

enum Proto_CS_CMD {
	NF_CS_MSG_GameStatusReq       = 10001; //游戏状态请求
	NF_SC_MSG_GameStatusRsp       = 10002; //游戏状态返回
	NF_SC_MSG_UserEnterDeskRsp    = 10004; //玩家进入桌子
	NF_SC_MSG_UserLeaveDeskRsp    = 10006; //玩家离开桌子
	
	NF_SC_MSG_GameStartRsp        = 10010; //游戏开始

	NF_SC_MSG_StartBetChipRsp     = 10020; //开始下注
	NF_CS_MSG_UserBetChipReq      = 10021; //玩家下注
	NF_SC_MSG_UserBetChipRsp      = 10022; //下注响应
	NF_SC_MSG_OpenPrizeRsp        = 10024; //开奖
	NF_CS_MSG_GetOnlineDataReq    = 10025; //获取游戏数据请求
	NF_SC_MSG_GetOnLineDataRsp    = 10026; //获取游戏数据响应
	NF_CS_MSG_UserRequestNtReq    = 10027; //玩家申请上庄请求
	NF_SC_MSG_UserRequestNtRsp    = 10028; //玩家申请上庄响应
	NF_SC_MSG_OtherUserBetChipRsp = 10030; //其它玩家下注信息
	
	NF_CS_MSG_UserRequestOffNtReq = 10031; //玩家申请下庄请求
	NF_SC_MSG_UserRequestOffNtRsp = 10032; //玩家申请下庄响应
	
	NF_CS_MSG_UserRepeatBetReq    = 10033; //玩家续压请求
	NF_SC_MSG_UserRepeatBetRsp    = 10034; //玩家续压响应
	
	
	
	NF_SCMSG_SystemError          = 11001; //系统错误
}

//下注错误码枚举
enum E_NoteErrorCode
{
	NOTE_SUCCESS                             = 0;                                     // 无错误
	NOTE_ERROR_NOTENOUNGH_MONEY              = 1;                                     // 钱不足
	NOTE_ERROR_NOT_NOTE_STATE                = 2;                                     // 非下注状态
	NOTE_ERROR_WRONG_CHIP                    = 3;                                     // 错误的押注筹码
	NOTE_ERROR_OVER_MAX_MONEY                = 4;                                     // 超过区域最大下注额
	NOTE_ERROR_UNKNOWN                       = 5;                                     // 未知错误
	NOTE_ERROR_NO_CONTINUE                   = 6;                                     // 没有续押记录
	NOTE_ERROR_NO_DATA_CLEAR                 = 7;                                     // 还未下注清空失败
	NOTE_ERROR_AREA                          = 8;                                     // 押注错误区域
	NOTE_ERROR_NT_CANT_BET                   = 9;                                     // 庄家不能下注
	NOTE_ERROR_REPEAT_BET_FAIL               = 10;                                    // 续压失败
	
}	
//游戏状态															                  
enum E_GameState														                  
{				
	STATE_GAMESTART				             = 1;									//游戏开始																						
	STATE_BETCHIP                            = 2;                                   // 下注 
	STATE_OPENPRIZE                          = 3;                                   // 开奖
	STATE_MAX                                = 4;
}

// 龙虎位置						             		                                 
enum E_PRIZE_TYPE					             		                                 
{								             		                                 
	PRIZE_TYPE_DRAGON                        = 1;                                     // 龙
	PRIZE_TYPE_PEACE                         = 2;	                                  // 和	
	PRIZE_TYPE_TIGER                         = 3;	                                  // 虎
    				                      
}			

message EnterGameReq
{
	optional uint32 game_id   = 1;			//游戏id
	optional uint32 room_id   = 2;			//房间id
	optional uint32 desk_id   = 3;			//桌子id
	optional uint32 chair_id  = 4;			//座位id
	optional uint32 proxy_id  = 5;			//服务端占用位
}


message EnterGameRsp
{
	optional uint32 result         = 1;			//结果码
	optional uint32 chair_count    = 2;
	optional uint32 my_chair_id    = 3;
	optional uint32 game_id        = 6;
	optional uint32 room_id        = 7;
	optional uint32 background_index = 8;		//当前正在使用的场景ID
	optional uint32 game_bus_id    = 9;
	
}

message ExitGameReq
{
	optional uint32 reserved = 1;  
}

message ExitGameRsp
{
	optional uint32 exit_type   = 1;   //0-退出失败(或者状态不对/玩家不在游戏中之类);  1-退出成功
}

message Card
{
	optional int32 type  = 1; //花色 0-方块 1-梅花 2-红桃 3-黑桃
	optional int32 point = 2; //点数 A-K
}

message PlayerInfo
{
	optional int32 chair_id          = 1; //玩家座位号 
	optional int64 user_id           = 2; 
	optional int64 user_curWinMoney  = 3;   //本把每个用户得分金额
	optional int64 user_money    	 = 4;   //每个用户剩余金额
	optional string user_name		 = 5;   //用户名字
	optional int32 usFaceId          = 6;   //头像id
}

//NF_CS_MSG_GameStatusReq = 10001; //游戏状态请求
message GameStatusReq
{
	optional int32 gameId = 1; //游戏ID
}

//NF_SC_MSG_GameStatusRsp = 10002; //游戏状态返回
message GameStatusRsp
{
	optional int32 gameStatus            		= 1;   //游戏当时所在的状态
	optional int32 curStationTotalTime          = 2;   //当前状态总时间
	optional int32 curStationLifeTime      		= 3;   //当前状态已过时间
	repeated int32 gameChipMoneyList          	= 4;   //下注筹码列表
	optional int32 prizeTotalCount       		= 5;   //已开总局数
	optional int32 prizeDragonCount      		= 6;   //开龙总局数
	optional int32 prizeTigerCount       		= 7;   //开虎总局数
	optional int32 prizePeaceCount       		= 8;   //开和总局数
	repeated int32 prizeHistoryRecord    		= 9;   //近50局开奖记录
	repeated int64 ownBetMoney         	        = 10;   //各区域自己已下注金额 三个区域/E_PRIZE_TYPE
	repeated int64 allBetMoney         		    = 11;  //各区域总下注金额 三个区域/E_PRIZE_TYPE
	
	//开奖状态
	optional Card  dragonAreaCard        = 12;   //龙区牌型
	optional Card  tigerAreaCard         = 13;   //虎区牌型
	optional int32 prizeType             = 14;   //开奖结果 E_PRIZE_TYPE
	repeated PlayerInfo aryPlayerInfo    = 15;   //本把每个用户的信息
	
	// 上庄模式数据
	optional bool  isApplyNtMode         = 16;  //是否为上庄模式
	optional int32 usMaxNtCount          = 17;  //最大上庄次数
	optional int64 ullNtMinMoney         = 18;  //上庄最低金额
	optional NtInfo ntCurInfo     		 = 19;  //庄家信息
	repeated NtInfo ntWaitList        	 = 20;  //上庄排队列表
	
}

//NF_SC_MSG_UserEnterDeskRsp = 10004; //玩家进入桌子
message UserEnterDeskRsp
{
	optional PlayerInfo playerInfo = 1;
}

//NF_SC_MSG_UserLeaveDeskRsp = 10006; //玩家离开桌子
message UserLeaveDeskRsp
{
	optional uint32 chair_id = 1;
}
//=============================================================================

message NtInfo
{
	optional int32 usNtChairId      = 1;   //庄家座位号
	optional int32 NtPlayingCount   = 2;   //连线坐庄次数
	optional int32 ntMoney			= 3;   //上庄的金额
	optional int64 user_curWinMoney = 4;   //本把得分金额
}

//NF_SC_MSG_GameStartRsp        = 10010; //游戏开始
message GameStartRsp
{
	optional int32 curStationTotalTime          = 1;   //当前状态总时间
	optional int32 curStationLifeTime      		= 2;   //当前状态已过时间
	optional NtInfo ntInfo     = 3;   //庄家信息
	repeated NtInfo ntWaitList = 4;  //上庄排队列表
}

//龙虎斗相关
//NF_SC_MSG_StartBetChipRsp     = 10020; //开始下注
message StartBetChipRsp
{
	optional int32 curStationTotalTime          = 1;   //当前状态总时间
	optional int32 curStationLifeTime      		= 2;   //当前状态已过时间
}

//NF_CS_MSG_UserBetChipReq       = 10021; //玩家下注
message UserBetChipReq
{
	optional int32 areaIndex  = 1; //下注区域对应枚举 E_PRIZE_TYPE
	optional int32 chipIndex  = 2; //筹码索引
}

message UsersBetChipInfo
{
	optional int32 usChairId       = 1; //玩家座位号
	optional int32 areaIndex       = 2; //一次下注区域对应枚举 E_PRIZE_TYPE , 合并下注值时这个值填0
	optional int32 chipIndex       = 3; //一次筹码索引 , 合并下注值时这个值填0
	repeated int64 addBetChipMoney = 4; //各区域下注金额增量 三个区域/E_PRIZE_TYPE
	repeated int64 ownBetChipMoney = 5; //各区域自己已下注金额 三个区域/E_PRIZE_TYPE
}

//两个消息用同一样结构message
//NF_SC_MSG_UserBetChipRsp           = 10022; //下注响应
//NF_SC_MSG_OtherUserBetChipRsp      = 10030; //其它玩家下注信息
//NF_SC_MSG_UserRepeatBetRsp         = 10034; //玩家续压响应
message UserBetChipRsp
{
	optional int32 result             = 1; //错误码 0-成功
	repeated UsersBetChipInfo aryPlayerChipInfo = 2; //玩家下注信息
	repeated int64 allBetChipMoney    = 3; //各区域总下注金额 三个区域/E_PRIZE_TYPE
	repeated PlayerInfo aryPlayerInfo = 4; //所有玩家身上所有的钱
}

//NF_CS_MSG_UserRepeatBetReq    = 10033; //玩家续压请求
message UserRepeatBetReq
{
	optional int32 Reserved     = 1; 
}


//	NF_SC_MSG_OpenPrizeRsp        = 10024; //开奖
message OpenPrizeRsp
{
	optional Card  dragonAreaCard        = 1;   //龙区牌型
	optional Card  tigerAreaCard         = 2;   //虎区牌型
	optional int32 prizeType             = 3;   //开奖结果 E_PRIZE_TYPE
	repeated PlayerInfo aryPlayerInfo    = 4;   //每个用户的信息
	optional NtInfo ntInfo               = 5;   //庄家信息
	repeated int32 prizeHistoryRecord    = 6;   //近50局开奖记录
	optional int32 curStationTotalTime   = 7;   //当前状态总时间
	optional int32 curStationLifeTime    = 8;   //当前状态已过时间
}

//	NF_CS_MSG_GetOnlineDataReq    = 10025; //获取游戏数据请求
message GetOnlineDataReq
{
	optional int32 Reserved = 1; 
}

//	NF_SC_MSG_GetOnLineDataRsp    = 10026; //获取游戏数据响应
message GetOnLineDataRsp
{
	repeated int64 nearWinCount       = 1; //最近50局获胜局数
	repeated int64 nearTotalNoteMoney = 2; //最近50局累计下注额
}

//NF_CS_MSG_UserRequestNtReq    = 10027; //玩家申请上庄请求
message UserRequestNtReq
{
	optional int32 NtMoney = 1;
}


//NF_SC_MSG_UserRequestNtRsp    = 10028; //玩家申请上庄响应
message UserRequestNtRsp
{
	optional int32 result          = 1; //0-成功 1-失败
	optional NtInfo ntInfo         = 2; //庄家信息
	repeated NtInfo ntWaitList     = 3; //上庄排队列表
}

//NF_CS_MSG_UserRequestOffNtReq = 10031; //玩家申请下庄请求
message UserRequestOffNtReq
{
	optional int32 reserved        = 1; //保留
}

//NF_SC_MSG_UserRequestOffNtRsp = 10032; //玩家申请下庄响应
message UserRequestOffNtRsp
{
	optional int32 result          = 1; //0-成功 1-失败
	optional int32 usChairId       = 2; //玩家座位号
}

//=============================================================================
